-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.11.0, Lustre 2.12.0
-
None
-
3
-
9223372036854775807
Today, new files created in directories with a default layout set do not inherit per-component layout flags.
This makes it impossible, for example, to set the preferred write replica or NOSYNC flags in a default layout and have it actually inherited. (In particular, it does appear in the directory striping, but new files do not pick it up.)
- mentioned in
-
Page Loading...